Add content for Release 2

--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Harambe the Gorilla</title>
 </head>
-<body><h1>Hello World!</h1>
-
+<body>
+	<h1>RIP Harambe</h1>
+	<p>I will always remember Harambe</p>
+	<strong>MAy 27, 1999 - May 28, 2016</strong>
+	<em>He was a good friend</em>
+	<h2>When I think of Harambe I think of</h2>
+	<ul>
+		<li>Silverback</li>
+		<li>Proud</li>
+		<li>Majestic</li>
+	</ul>
+	<h2>List of things I'd rather have happen instead of Harambe dying</h2>
+	<ol>
+		<li>Stepping on a lego</li>
+		<li>Eating Arby's</li>
+		<li>Leprosy</li>
+	</ol>
+	<h2>Find out more about Harambe <a href="https://en.wikipedia.org/wiki/Killing_of_Harambe">here</a></h2>
 </body>
 </html>
