--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -26,5 +26,22 @@
 			<td>5/14/96</td>
 		</tr>
 	</table>
+	<table border="1">
+		<tr>
+			<th>Header 1</th>
+			<th>Header 2</th>
+			<th>Header 3</th>
+		</tr>
+		<tr>
+			<td rowspan="2">Blahblah</td>
+			<td>Blahblah</td>
+			<td>Blahblah</td>
+		</tr>
+		<tr>
+			<td colspan="2">Blahblah</td>
+			<td>Blahblah</td>
+			<td>Blahblah</td>
+		</tr>
+	</table>
 </body>
 </html>
