--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -31,14 +31,24 @@
 			<th>Header 1</th>
 			<th>Header 2</th>
 			<th>Header 3</th>
+			<th>Header 4</th>
 		</tr>
 		<tr>
 			<td rowspan="2">Blahblah</td>
 			<td>Blahblah</td>
 			<td>Blahblah</td>
+			<td>Blahblah</td>
+			<td>Blahblah</td>
 		</tr>
 		<tr>
 			<td colspan="2">Blahblah</td>
+			<td>Blahblah</td>
+			<td>Blahblah</td>
+		</tr>
+		<tr>
+			<td>Blahblah</td>
+			<td>Blahblah</td>
+			<td>Blahblah</td>
 			<td>Blahblah</td>
 			<td>Blahblah</td>
 		</tr>
