--- a/css/css-demo/index.html
+++ b/css/css-demo/index.html
@@ -7,7 +7,7 @@
 
   <link rel="stylesheet" href="styles/elegant-styles.css" type="text/css">
   <link rel="stylesheet" href="styles/fixed-contact.css" type="text/css">
-  
+  <link rel="stylesheet" href="styles/practice.css" type="text/css">
 </head>
 <body>
   <h1 id="resume-title">Resume for Imogen Ary-Perrson</h1>
