id class background color

--- a/css/css-demo/index.html
+++ b/css/css-demo/index.html
@@ -27,7 +27,7 @@
       <h3>General Practitioner, The Circus</h3>
       <ul class="smaller">
         <li>Wrangled flaming hula hoops</li>
-        <li>Served as first assistant to trapeze team</li>
+        <li id="backgroud-color">Served as first assistant to trapeze team</li>
         <li class="featured">Provided quality assurance for cotton candy</li>
       </ul>
     </section>
