--- a/css/positioning/index.html
+++ b/css/positioning/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 	<div class="octopus-wrapper">
-		<div id="hat"><img src="hat.jpg" /></div>
-		<div id="glasses"><img src="glasses.jpg" /></div>
-		<div id="octopus"><img src="octopus.jpg" /></div>
+		<div id="hat"><img src="hat.png" /></div>
+		<div id="glasses"><img src="glasses.png" /></div>
+		<div id="octopus"><img src="octopus.png" /></div>
 	</div>
 
 
