--- a/css/gps/gps2-1.html
+++ b/css/gps/gps2-1.html
@@ -1,5 +1,5 @@
 
-
+/* This was a good review for CSS positioning and styling. In fact, I learned some new tricks on positioning from my pair. I feel like my command of CSS is better now than from before. */
 <!DOCTYPE html>
 <html lang="en">
   <head>
